@@ -43,7 +43,6 @@ import java.io.IOException;
 import java.net.URL;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Base64;
 import java.util.Collections;
 import java.util.HashMap;
@@ -105,7 +104,7 @@ public class TwitterClient implements ITwitterClientV1, ITwitterClientV2, ITwitt
     do {
       String           urlWithCursor  = url + "&" + CURSOR + "=" + cursor;
       Optional<IdList> idListResponse = this.requestHelperV2.getRequest(urlWithCursor, IdList.class);
-      if (!idListResponse.isPresent()) {
+      if (idListResponse.isEmpty()) {
         break;
       }
       result.addAll(idListResponse.get().getIds());
@@ -125,7 +124,7 @@ public class TwitterClient implements ITwitterClientV1, ITwitterClientV2, ITwitt
         urlWithCursor = urlWithCursor + "&" + PAGINATION_TOKEN + "=" + token;
       }
       Optional<UserListV2> userListDTO = this.requestHelperV2.getRequest(urlWithCursor, UserListV2.class);
-      if (!userListDTO.isPresent()) {
+      if (userListDTO.isEmpty()) {
         break;
       }
       result.addAll(userListDTO.get().getData());
@@ -317,8 +316,8 @@ public class TwitterClient implements ITwitterClientV1, ITwitterClientV2, ITwitt
     List<TweetV1> result;
     String        maxId          = null;
     do {
-      result = Arrays.asList(this.requestHelperV2.getRequest(this.getUrlHelper().getFavoriteTweetsUrl(userId, maxId), TweetV1[].class)
-                                                 .orElseThrow(NoSuchElementException::new));
+      result = List.of(this.requestHelperV2.getRequest(this.getUrlHelper().getFavoriteTweetsUrl(userId, maxId), TweetV1[].class)
+                                           .orElseThrow(NoSuchElementException::new));
       if (result.isEmpty()) {
         break;
       }
@@ -346,7 +345,7 @@ public class TwitterClient implements ITwitterClientV1, ITwitterClientV2, ITwitt
     do {
       Optional<TweetSearchResponseV2> tweetSearchV2DTO = this.requestHelperV2.getRequestWithParameters(
           URLHelper.SEARCH_TWEET_7_DAYS_URL, parameters, TweetSearchResponseV2.class);
-      if (!tweetSearchV2DTO.isPresent() || tweetSearchV2DTO.get().getData() == null) {
+      if (tweetSearchV2DTO.isEmpty() || tweetSearchV2DTO.get().getData() == null) {
         break;
       }
       result.addAll(tweetSearchV2DTO.get().getData());
@@ -388,7 +387,7 @@ public class TwitterClient implements ITwitterClientV1, ITwitterClientV2, ITwitt
     parameters.put("tweet.fields", URLHelper.ALL_TWEET_FIELDS);
     Optional<TweetSearchResponseV2> tweetSearchV2DTO = this.requestHelperV2.getRequestWithParameters(
         searchUrl, parameters, TweetSearchResponseV2.class);
-    if (!tweetSearchV2DTO.isPresent() || tweetSearchV2DTO.get().getData() == null) {
+    if (tweetSearchV2DTO.isEmpty() || tweetSearchV2DTO.get().getData() == null) {
       return new TweetSearchResponse(new ArrayList<>(), null);
     }
     List<Tweet> result = new ArrayList<>(tweetSearchV2DTO.get().getData());
@@ -422,7 +421,7 @@ public class TwitterClient implements ITwitterClientV1, ITwitterClientV2, ITwitt
     do {
       Optional<TweetSearchResponseV1> tweetSearchV1DTO = this.requestHelperV2.getRequestWithParameters(
           urlHelper.getSearchTweet30DaysUrl(envName), parameters, TweetSearchResponseV1.class);
-      if (!tweetSearchV1DTO.isPresent() || tweetSearchV1DTO.get().getResults() == null) {
+      if (tweetSearchV1DTO.isEmpty() || tweetSearchV1DTO.get().getResults() == null) {
         break;
       }
       result.addAll(tweetSearchV1DTO.get().getResults());
@@ -447,7 +446,7 @@ public class TwitterClient implements ITwitterClientV1, ITwitterClientV2, ITwitt
     do {
       Optional<TweetSearchResponseV1> tweetSearchV1DTO = this.requestHelperV2.getRequestWithParameters(
           urlHelper.getSearchTweetFullArchiveUrl(envName), parameters, TweetSearchResponseV1.class);
-      if (!tweetSearchV1DTO.isPresent()) {
+      if (tweetSearchV1DTO.isEmpty()) {
         LOGGER.error("empty response on searchForTweetsArchive");
         break;
       }
@@ -520,7 +519,7 @@ public class TwitterClient implements ITwitterClientV1, ITwitterClientV2, ITwitt
         url = url + "&" + PAGINATION_TOKEN + "=" + token;
       }
       Optional<TweetSearchResponseV2> tweetListDTO = this.requestHelperV2.getRequest(url, TweetSearchResponseV2.class);
-      if (!tweetListDTO.isPresent() || tweetListDTO.get().getData() == null) {
+      if (tweetListDTO.isEmpty() || tweetListDTO.get().getData() == null) {
         break;
       }
       result.addAll(tweetListDTO.get().getData());
@@ -553,7 +552,7 @@ public class TwitterClient implements ITwitterClientV1, ITwitterClientV2, ITwitt
         url = url + "&" + PAGINATION_TOKEN + "=" + token;
       }
       Optional<TweetSearchResponseV2> tweetListDTO = this.requestHelperV2.getRequest(url, TweetSearchResponseV2.class);
-      if (!tweetListDTO.isPresent() || tweetListDTO.get().getData() == null) {
+      if (tweetListDTO.isEmpty() || tweetListDTO.get().getData() == null) {
         break;
       }
       result.addAll(tweetListDTO.get().getData());
@@ -575,7 +574,7 @@ public class TwitterClient implements ITwitterClientV1, ITwitterClientV2, ITwitt
     if (!file.exists()) {
       LOGGER.error("file not found at : " + file.toURI().toString());
     } else {
-      result = Arrays.asList(customObjectMapper.readValue(file, TweetV1[].class));
+      result = List.of(customObjectMapper.readValue(file, TweetV1[].class));
     }
     return result;
   }
